# atex-api

./: .gitignore  CLAUDE.md  MTYPE_COVERAGE.md  build.gradle  compose.yaml  implementation_status.md  settings.gradle
.claude/: settings.local.json
desk-image/: Cargo.toml  Dockerfile  config.toml
desk-image/src/: config.rs  handler.rs  main.rs  processing.rs  signing.rs  storage.rs
desk-integration/: build.gradle
desk-integration/src/main/resources/: application.yml
docs/: increments.md  migration-guide.md
plugins/desk-custom-test/: build.gradle
scripts/: APPEND-TEST-PLAN.md  append-test.py  compat-test.py  config-mapping.txt  config-sync.py  external-ids.txt  image-perf-report.csv  image-perf-test.py  migrate-legacy.py  migrate-report.txt  migrate-skip.txt  smoke-test.sh
src/main/java/com/atex/integration/: SSOUtil.java
src/main/java/com/atex/onecms/: GeoLocation.java
src/main/java/com/polopoly/application/: Application.java  ApplicationComponent.java  ApplicationServletUtil.java  IllegalApplicationStateException.java
src/main/java/com/polopoly/cm/: ContentId.java  ContentIdFactory.java  ContentReference.java  ExternalContentId.java  VersionedContentId.java
src/main/java/com/polopoly/metadata/: Dimension.java  Entity.java  Metadata.java
src/main/java/com/polopoly/util/: StringUtil.java
src/main/resources/: application.properties  data.sql  schema.sql
src/main/resources/db/migration/: V1__baseline.sql
src/main/resources/static/: dashboard.html
src/test/resources/: application-itest.properties
(+837 files in other folders)
