[package]
name = "desk-image"
version = "0.1.0"
edition = "2021"
description = "High-performance image processing sidecar for desk-api"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "tiff"] }
fast_image_resize = { version = "5", features = ["image"] }

# S3 / filesystem
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

# HMAC signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Caching
lru = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
